# Mister-Smith

./: .augment-guidelines.md  .gitignore  .markdownlint.json  .markdownlintignore  .roomodes  AGENT_NATS_DELIVERABLES_SUMMARY.md  CF-DEV-SPECIALIST-GUIDE.md  CLAUDE-SEARCH-OPTIMIZATION.md  CLAUDE.md  CLAUDE_ANALYSIS_AND_BEST_PRACTICES.md  CLAUDE_CLI_INTEGRATION_BLUEPRINT.md  CLAUDE_CLI_INTEGRATION_TESTS.md  CLAUDE_FLOW_CONVERSATION_LOG.md  CLAUDE_FLOW_DEEP_ANALYSIS.md  CLAUDE_FLOW_INVESTIGATION_PROMPT.md  CLAUDE_FLOW_REAL_FEATURES_REPORT.md  CLAUDE_MD_30_AGENT_OPERATION_SUMMARY.md  CLAUDE_TEMPLATE.md  CLAUDE_USAGE_GUIDE.md  CORE_ARCHITECTURE_INTEGRATION_EVIDENCE_REPORT.md  Cargo.toml  GAP_ANALYSIS_REPORT.md  GEMINI.md  HIERARCHICAL_PATTERN_EXAMPLES.md  HIERARCHICAL_VS_P2P_COMPARISON.md  IMPLEMENTATION_STATUS.md  MASTER-CLAUDE-SEARCH-GUIDE.md  MISTERSMITH_USE_CASES.md  MISTERSMITH_VS_VANILLA_COMPARISON.md  MISTER_SMITH_WEBSITE_CONTENT_PLAN.md  MS3-INIT.md  MS3-SPECIALIST-GUIDE.md  MisterSmith.code-workspace  NATS_REQUIREMENTS_ANALYSIS_PHASE2.md  PERFORMANCE_BASELINES.md  PHASE2_TESTING_GUIDE.md  PHASE2_TEST_VALIDATION_REPORT.md  PHASE3_MULTI_AGENT_ARCHITECTURE.md  PHASE3_NATS_INTEGRATION_EXAMPLE.md  README-claude-flow-swarm.md  (+36 more)
*backup/: Cargo.toml  claude-flow copy
.claude/: CLAUDE_FLOW_OPTIMIZATION_COMPLETE.md  config.json  memory-ttl-config.json  settings.json  swarm-topology-config.json  validation-patterns.json
.github/: github-mistersmith-management.json
.hive-mind/: claude-flow-specialists.json  claude-specialist-prompt-swarm-1752402091957-w33ro1vn4.txt  config.json  hive.db  hive.db-shm  integrate-specialists.sh  spawn-cf-specialists.js  spawn-specialists.js  specialist-workers.json
.swarm/: memory.db  memory.db-shm  memory.db-wal
AWS_Research/: AWS_Report_1_O.md  AWS_Report_2_C.md  AWS_Report_3_P.md  AWS_Report_4_G.md
_security/: index.md
benches/: performance_baseline.rs  performance_testing.rs
claude-code-research/: AGENT-TRAINING-SPECS.md  TRAINING-IMPLEMENTATION-GUIDE.md
docs/: CNAME
examples/: README.md  basic_tokio_runtime.rs  collaboration_demo.rs  comprehensive_discovery_demo.rs  integrated_collaboration_test.rs  memory_stress_test.rs  metrics_usage.rs  performance_test_runner.rs  real_time_collaboration.rs  simple_validation_test.rs  sse_client_example.html  sse_discovery_stream.rs  test_claude_executor.rs  test_nats_collaboration.rs  verify_persistent_session.rs  verify_tokio_foundation.rs
generated-diagrams/: mistersmith-aws-options-comparison
internal-operations/: CLAUDE.md  MASTER-CLAUDE-SEARCH-GUIDE.md  Phase_2-3_Directory_Analysis.md  RUST-REWRITE-DEPLOYMENT-PLAN.md  (+14 more)
internal-operations/aws-migration-plan/phase-3-implementation/sub-phase-3.4-protocol-translation/: Cargo.toml
internal-operations/aws-migration-plan/phase-3-implementation/sub-phase-3.4-protocol-translation/examples/: basic_translation.rs
internal-operations/aws-migration-plan/phase-3-implementation/sub-phase-3.4-protocol-translation/src/: connection.rs  transformation.rs
(+572 files in other folders)
