[package]
name = "nats-aws-translator"
version = "0.1.0"
edition = "2021"
authors = ["MisterSmith Team"]
description = "NATS to AWS protocol translation layer for MisterSmith migration"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# AWS SDK
aws-config = "1.1"
aws-sdk-eventbridge = "1.9"
aws-sdk-sqs = "1.9"
aws-sdk-lambda = "1.9"
aws-sdk-dynamodb = "1.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Connection pooling
bb8 = "0.8"

# Data structures
dashmap = "5.5"
regex = "1.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"
base64 = "0.21"

[dev-dependencies]
mockall = "0.12"
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "translation_bench"
harness = false

[[example]]
name = "basic_translation"
path = "examples/basic_translation.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3